# Project_Bixi

./: README.md
base_vision/: CMakeLists.txt  package.xml
base_vision/cfg/: armor_color.cfg  board_color.cfg  building_blocks.cfg
base_vision/launch/: armor_detection.launch  arrow.launch  board.launch  image_publisher.launch  video_publisher.launch
base_vision/src/: armor_detection.cpp  arrow.cpp  board.cpp  building_blocks.cpp
bixi_description/: model.rviz
bixi_description/launch/: bringup.launch  fake_bringup.launch
bixi_description/nodes/: tf_broadcaster.py
bixi_nav/nodes/: go_to_goal.py  go_to_goal2.py  go_to_goal3.py  mission_planner.py  push_planner.py  simple_planner.py  square_detect_sick.py  test.py
strategy_plan/: arena.SLDPRT  boxes.SLDPRT  plan.SLDASM  robot.SLDPRT  top_view_plan.docx
